bruk junit 5 (#472)
* first shot uten junit4, en del tester disabled foreløpig

* LogSniffer gone (nesten)

* LogSniffer gone (nesten)

* logsniffer replacement

* logsniffer replacement

* logsniffer replacement

* logsniffer replacement

* fjernet ubrukt

* junit4 complete

* junit4 complete

* fpfelles tilbake

* ikke fjern deprecated ting riktig enda

* Update pom.xml